--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ futures = "0.3"
 serde_json = "1"
 serde = {version = "1", features = ["derive"] }
 log = "0.4"
+uuid = { version = "1", features = ["serde", "v4"] }
+redis = { version = "0.23.0", features = ["tokio-comp", "cluster-async", "json"] }
+pretty_env_logger = "0.4"
+env_logger = "0.10.0"
+dotenv = "0.15"
 
 
 
