add profile optimiser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,11 @@ dotenv = "0.15"
 [[bin]]
 name = "s4"
 path = "src/main.rs"
+
+
+[profile.release]
+panic = "abort"
+opt-level = "z"
+lto = true
+codegen-units = 1
+overflow-checks = true # panic on any overflow
